docs/api/qiskit/0.43/qiskit.algorithms.VQE.mdx
---
title: VQE
description: API reference for qiskit.algorithms.VQE
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.VQE
---

# VQE

<Class id="qiskit.algorithms.VQE" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/minimum_eigen_solvers/vqe.py" signature="VQE(ansatz=None, optimizer=None, initial_point=None, gradient=None, expectation=None, include_custom=False, max_evals_grouped=1, callback=None, quantum_instance=None)">
  Bases: `VariationalAlgorithm`, [`MinimumEigensolver`](qiskit.algorithms.MinimumEigensolver "qiskit.algorithms.minimum_eigen_solvers.minimum_eigen_solver.MinimumEigensolver")

  Deprecated: Variational Quantum Eigensolver algorithm.

  The VQE class has been superseded by the [`qiskit.algorithms.minimum_eigensolvers.VQE`](qiskit.algorithms.minimum_eigensolvers.VQE "qiskit.algorithms.minimum_eigensolvers.VQE") class. This class will be deprecated in a future release and subsequently removed after that.

  [VQE](https://arxiv.org/abs/1304.3061) is a quantum algorithm that uses a variational technique to find the minimum eigenvalue of the Hamiltonian $H$ of a given system.

  An instance of VQE requires defining two algorithmic sub-components: a trial state (a.k.a. ansatz) which is a `QuantumCircuit`, and one of the classical [`optimizers`](qiskit.algorithms.optimizers#module-qiskit.algorithms.optimizers "qiskit.algorithms.optimizers"). The ansatz is varied, via its set of parameters, by the optimizer, such that it works towards a state, as determined by the parameters applied to the ansatz, that will result in the minimum expectation value being measured of the input operator (Hamiltonian).

  An optional array of parameter values, via the *initial\_point*, may be provided as the starting point for the search of the minimum eigenvalue. This feature is particularly useful such as when there are reasons to believe that the solution point is close to a particular point. As an example, when building the dissociation profile of a molecule, it is likely that using the previous computed optimal solution as the starting initial point for the next interatomic distance is going to reduce the number of iterations necessary for the variational algorithm to converge. It provides an [initial point tutorial](https://github.com/Qiskit/qiskit-tutorials-community/blob/master/chemistry/h2_vqe_initial_point.ipynb) detailing this use case.

  The length of the *initial\_point* list value must match the number of the parameters expected by the ansatz being used. If the *initial\_point* is left at the default of `None`, then VQE will look to the ansatz for a preferred value, based on its given initial state. If the ansatz returns `None`, then a random point will be generated within the parameter bounds set, as per above. If the ansatz provides `None` as the lower bound, then VQE will default it to $-2\pi$; similarly, if the ansatz returns `None` as the upper bound, the default value will be $2\pi$.

  The optimizer can either be one of Qiskit’s optimizers, such as [`SPSA`](qiskit.algorithms.optimizers.SPSA "qiskit.algorithms.optimizers.SPSA") or a callable with the following signature:

  <Admonition title="Note" type="note">
    The callable \_must\_ have the argument names `fun, x0, jac, bounds` as indicated in the following code block.
  </Admonition>

  ```python
  from qiskit.algorithms.optimizers import OptimizerResult

  def my_minimizer(fun, x0, jac=None, bounds=None) -> OptimizerResult:
      # Note that the callable *must* have these argument names!
      # Args:
      #     fun (callable): the function to minimize
      #     x0 (np.ndarray): the initial point for the optimization
      #     jac (callable, optional): the gradient of the objective function
      #     bounds (list, optional): a list of tuples specifying the parameter bounds

      result = OptimizerResult()
      result.x = # optimal parameters
      result.fun = # optimal function value
      return result
  ```

  The above signature also allows to directly pass any SciPy minimizer, for instance as

  ```python
  from functools import partial
  from scipy.optimize import minimize

  optimizer = partial(minimize, method="L-BFGS-B")
  ```

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.algorithms.minimum_eigen_solvers.vqe.VQE` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. Instead, use the class `qiskit.algorithms.minimum_eigensolvers.VQE`. See [https://qisk.it/algo\_migration](https://qisk.it/algo_migration) for a migration guide.
  </Admonition>

  **Parameters**

  *   **ansatz** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") *| None*) – A parameterized circuit used as Ansatz for the wave function.
  *   **optimizer** ([*Optimizer*](qiskit.algorithms.optimizers.Optimizer "qiskit.algorithms.optimizers.Optimizer")  *|*[*Minimizer*](qiskit.algorithms.optimizers.Minimizer "qiskit.algorithms.optimizers.Minimizer") *| None*) – A classical optimizer. Can either be a Qiskit optimizer or a callable that takes an array as input and returns a Qiskit or SciPy optimization result.
  *   **initial\_point** (*np.ndarray | None*) – An optional initial point (i.e. initial parameter values) for the optimizer. If `None` then VQE will look to the ansatz for a preferred point and if not will simply compute a random one.
  *   **gradient** ([*GradientBase*](qiskit.opflow.gradients.GradientBase "qiskit.opflow.gradients.GradientBase") *| Callable | None*) – An optional gradient function or operator for optimizer.
  *   **expectation** ([*ExpectationBase*](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.ExpectationBase") *| None*) – The Expectation converter for taking the average value of the Observable over the ansatz state function. When `None` (the default) an [`ExpectationFactory`](qiskit.opflow.expectations.ExpectationFactory "qiskit.opflow.expectations.ExpectationFactory") is used to select an appropriate expectation based on the operator and backend. When using Aer qasm\_simulator backend, with paulis, it is however much faster to leverage custom Aer function for the computation but, although VQE performs much faster with it, the outcome is ideal, with no shot noise, like using a state vector simulator. If you are just looking for the quickest performance when choosing Aer qasm\_simulator and the lack of shot noise is not an issue then set include\_custom parameter here to `True` (defaults to `False`).
  *   **include\_custom** (*bool*) – When expectation parameter here is None setting this to `True` will allow the factory to include the custom Aer pauli expectation.
  *   **max\_evals\_grouped** (*int*) – Max number of evaluations performed simultaneously. Signals the given optimizer that more than one set of parameters can be supplied so that potentially the expectation values can be computed in parallel. Typically this is possible when a finite difference gradient is used by the optimizer such that multiple points to compute the gradient can be passed and if computed in parallel improve overall execution time. Deprecated if a gradient operator or function is given.
  *   **callback** (*Callable\[\[int, np.ndarray, float, float], None] | None*) – a callback that can access the intermediate data during the optimization. Four parameter values are passed to the callback as follows during each evaluation by the optimizer for its current set of parameters as it works towards the minimum. These are: the evaluation count, the optimizer parameters for the ansatz, the evaluated mean and the evaluated standard deviation.\`
  *   **quantum\_instance** ([*QuantumInstance*](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance")  *|*[*Backend*](qiskit.providers.Backend "qiskit.providers.Backend") *| None*) – Quantum Instance or Backend

  ## Methods

  <span id="qiskit-algorithms-vqe-compute-minimum-eigenvalue" />

  ### compute\_minimum\_eigenvalue

  <Function id="qiskit.algorithms.VQE.compute_minimum_eigenvalue" name="compute_minimum_eigenvalue" signature="VQE.compute_minimum_eigenvalue(operator, aux_operators=None)">
    Computes minimum eigenvalue. Operator and aux\_operators can be supplied here and if not None will override any already set into algorithm so it can be reused with different operators. While an operator is required by algorithms, aux\_operators are optional. To ‘remove’ a previous aux\_operators array use an empty list here.

    **Parameters**

    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – Qubit operator of the Observable
    *   **aux\_operators** (*ListOrDict\[*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")*] | None*) – Optional list of auxiliary operators to be evaluated with the eigenstate of the minimum eigenvalue main result and their expectation values returned. For instance in chemistry these can be dipole operators, total particle count operators so we can get values for these at the ground state.

    **Returns**

    MinimumEigensolverResult

    **Return type**

    [MinimumEigensolverResult](qiskit.algorithms.MinimumEigensolverResult "qiskit.algorithms.MinimumEigensolverResult")
  </Function>

  <span id="qiskit-algorithms-vqe-construct-circuit" />

  ### construct\_circuit

  <Function id="qiskit.algorithms.VQE.construct_circuit" name="construct_circuit" signature="VQE.construct_circuit(parameter, operator)">
    Return the circuits used to compute the expectation value.

    **Parameters**

    *   **parameter** (*list\[float] | list\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.Parameter")*] | np.ndarray*) – Parameters for the ansatz circuit.
    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – Qubit operator of the Observable

    **Returns**

    A list of the circuits used to compute the expectation value.

    **Return type**

    list\[[QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")]
  </Function>

  <span id="qiskit-algorithms-vqe-construct-expectation" />

  ### construct\_expectation

  <Function id="qiskit.algorithms.VQE.construct_expectation" name="construct_expectation" signature="VQE.construct_expectation(parameter, operator, return_expectation=False)">
    Generate the ansatz circuit and expectation value measurement, and return their runnable composition.

    **Parameters**

    *   **parameter** (*list\[float] | list\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.Parameter")*] | np.ndarray*) – Parameters for the ansatz circuit.
    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – Qubit operator of the Observable
    *   **return\_expectation** (*bool*) – If True, return the `ExpectationBase` expectation converter used in the construction of the expectation value. Useful e.g. to compute the standard deviation of the expectation value.

    **Returns**

    The Operator equalling the measurement of the ansatz `StateFn` by the Observable’s expectation `StateFn`, and, optionally, the expectation converter.

    **Raises**

    *   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If no operator has been provided.
    *   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If no expectation is passed and None could be inferred via the ExpectationFactory.

    **Return type**

    [OperatorBase](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase") | tuple\[[OperatorBase](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase"), [ExpectationBase](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.ExpectationBase")]
  </Function>

  <span id="qiskit-algorithms-vqe-get-energy-evaluation" />

  ### get\_energy\_evaluation

  <Function id="qiskit.algorithms.VQE.get_energy_evaluation" name="get_energy_evaluation" signature="VQE.get_energy_evaluation(operator, return_expectation=False)">
    Returns a function handle to evaluates the energy at given parameters for the ansatz.

    This is the objective function to be passed to the optimizer that is used for evaluation.

    **Parameters**

    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – The operator whose energy to evaluate.
    *   **return\_expectation** (*bool*) – If True, return the `ExpectationBase` expectation converter used in the construction of the expectation value. Useful e.g. to evaluate other operators with the same expectation value converter.

    **Returns**

    Energy of the hamiltonian of each parameter, and, optionally, the expectation converter.

    **Raises**

    **RuntimeError** – If the circuit is not parameterized (i.e. has 0 free parameters).

    **Return type**

    Callable\[\[np.ndarray], float | list\[float]] | tuple\[Callable\[\[np.ndarray], float | list\[float]], [ExpectationBase](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.ExpectationBase")]
  </Function>

  <span id="qiskit-algorithms-vqe-print-settings" />

  ### print\_settings

  <Function id="qiskit.algorithms.VQE.print_settings" name="print_settings" signature="VQE.print_settings()">
    Preparing the setting of VQE into a string.

    **Returns**

    the formatted setting of VQE

    **Return type**

    str
  </Function>

  <span id="qiskit-algorithms-vqe-supports-aux-operators" />

  ### supports\_aux\_operators

  <Function id="qiskit.algorithms.VQE.supports_aux_operators" name="supports_aux_operators" signature="classmethod VQE.supports_aux_operators()">
    Whether computing the expectation value of auxiliary operators is supported.

    If the minimum eigensolver computes an eigenstate of the main operator then it can compute the expectation value of the aux\_operators for that state. Otherwise they will be ignored.

    **Returns**

    True if aux\_operator expectations can be evaluated, False otherwise

    **Return type**

    bool
  </Function>

  ## Attributes

  ### ansatz

  <Attribute id="qiskit.algorithms.VQE.ansatz" name="ansatz">
    Returns the ansatz.
  </Attribute>

  ### callback

  <Attribute id="qiskit.algorithms.VQE.callback" name="callback">
    Returns callback
  </Attribute>

  ### expectation

  <Attribute id="qiskit.algorithms.VQE.expectation" name="expectation">
    The expectation value algorithm used to construct the expectation measurement from the observable.
  </Attribute>

  ### gradient

  <Attribute id="qiskit.algorithms.VQE.gradient" name="gradient">
    Returns the gradient.
  </Attribute>

  ### include\_custom

  <Attribute id="qiskit.algorithms.VQE.include_custom" name="include_custom">
    Returns include\_custom
  </Attribute>

  ### initial\_point

  <Attribute id="qiskit.algorithms.VQE.initial_point" name="initial_point">
    Returns initial point
  </Attribute>

  ### max\_evals\_grouped

  <Attribute id="qiskit.algorithms.VQE.max_evals_grouped" name="max_evals_grouped">
    Returns max\_evals\_grouped
  </Attribute>

  ### optimizer

  <Attribute id="qiskit.algorithms.VQE.optimizer" name="optimizer">
    Returns optimizer
  </Attribute>

  ### quantum\_instance

  <Attribute id="qiskit.algorithms.VQE.quantum_instance" name="quantum_instance">
    Returns quantum instance.
  </Attribute>

  ### setting

  <Attribute id="qiskit.algorithms.VQE.setting" name="setting">
    Prepare the setting of VQE as a string.
  </Attribute>
</Class>

